syntax = "proto3";

option go_package = "roque/proto";

package proto;

message Void {}

message Message {
    string topic = 1;
    bytes  data = 2;
    int64 idx = 3;
}

// write
message WriteRequest {    
    repeated Message messages = 1;
}

// read
message ReadRequest {
    string ClientID = 1;
    string topic = 2;        
}

// commit
message CommitRequest {
    string ClientID = 1;
    string topic = 2;        
    int64 idx = 3;
}

// service
service Roque {
    rpc Write (WriteRequest) returns (Void);
    rpc Read (ReadRequest) returns (Message);
    rpc Stream(ReadRequest) returns (stream Message);
    rpc Commit(CommitRequest) returns (Void);
}